<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Momus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="home_screen_tabs">
        <item>For You</item>
        <item>Sports</item>
        <item>Television</item>
        <item>Favorites</item>
    </string-array>
    
    <string-array name="television_tabs">
        <item>Live</item>
        <item>Popular</item>
    </string-array>
    
    <string-array name="sports_tabs">
        <item>NFL</item>
        <item>NBA</item>
        <item>MLB</item>
        <item>NHL</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_tv">Television</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">Favorites</string>

    <string-array name="home_screen_sports_list">
        <item>NFL</item>
        <item>NBA</item>
        <item>MLB</item>
        <item>NHL</item>
    </string-array>
    <string-array name="home_screen_television_list">
        <item>Walker, Texas Ranger</item>
        <item>Entourage</item>
        <item>Last Week Tonight with John Oliver</item>
        <item>Cosby Show</item>
        <item>One Upon a Time</item>
        <item>Mad Men</item>
        <item>Eureka</item>
        <item>Tonight Show</item>
        <item>Orange is the New Black</item>
        <item>True Detective</item>
        <item>Homeland</item>
        <item>Everybody Loves Raymond</item>
        <item>True Blood</item>
        <item>Hard Knocks</item>
        <item>Under the Dome</item>
        <item>Nurse Jackie</item>
        <item>Doogie Howser, M.D.</item>
        <item>Everbody Hates Chris</item>
        <item>Rizzoli &amp; Isles</item>
        <item>Deal or No Deal</item>
        <item>Odd Couple</item>
        <item>MacGyver</item>
        <item>ER</item>
    </string-array>

    <string name="pref_username">Username</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="home_sentence">Welcome to the Thunderdome</string>
    <string name="chat_button_msg">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">1449562488698812</string>
    <string name="username">Barry Allen</string>
    <string name="sports_transition">Sports Header Transition</string>
    <string name="title_activity_sport_list">SportListActivity</string>
    <string name="default_username">User</string>
    <string name="category_user">User Information</string>
    <string name="category_user_des">User Information</string>
    <string name="pref_location">Location</string>
    <string name="pref_location_des">Your current location</string>
    <string name="pref_facebook">Log out</string>
    <string name="category_ui">UI Settings</string>
    <string name="category_ui_des">UI Settings</string>
    <string name="pref_multicolored">Chat Colors</string>
    <string name="pref_multicolored_des_pos">Each chat window will have it\'s own color</string>
    <string name="pref_multicolored_des_neg">Every chat window will share the same color</string>
    <string name="pref_twocolumn">Use Multiple Columns</string>
    <string name="pref_twocolumn_des_neg">Display lists with one column</string>
    <string name="pref_twocolumn_des_pos">Display lists with two columns</string>
    <string name="category_dev">Experimental Settings</string>
    <string name="pref_pallete">Use Pallete API</string>
    <string name="pref_pallete_des">EXPERIMENTAL: Use Pallete API for grid views when possible. Might result in crashes.</string>
    <string name="category_info">About Us</string>
    <string name="pref_rate">Rate us on Google Play</string>
    <string name="pref_about">About the Team</string>
    <string name="pref_build">Build Number</string>
    <string name="pref_trans_nav">Navigation Bar</string>
    <string name="pref_trans_nav_des_pos">Will use a translucent navigation bar</string>
    <string name="pref_trans_nav_des_neg">Will use a solid navigation bar</string>
        <string name="pref_black">Paint it, Black</string>
    <string name="pref_black_des_pos">No colors anymore, I want them to turn black.</string>
    <string name="pref_black_des_neg">I see a red door and I want to paint it black.</string>
    <string name="title_activity_tv">TV</string>
	<string name="title_activity_sports">Sports</string>
	<string name="pref_loading_snackbar">Show Loading Snackbars</string>
	<string name="pref_do_it">Motivation</string>
	<string name="pref_do_it_des_pos">Nothing is Impossible</string>
	<string name="pref_do_it_des_neg">Don\'t let your dreams be dreams</string>
</resources>
