<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<item
    android:id="@+id/navigation_subheader"
    android:title="@string/app_name">
        <menu>
    <item
		android:id="@+id/home_menu"
		android:icon="@drawable/ic_home_black_18dp"
		android:title="@string/menu_home"/>
    <item
        android:id="@+id/sports_menu"
        android:icon="@drawable/ic_stars_black_18dp"
        android:title="@string/menu_sports" />
    <item
		android:id="@+id/tv_menu"
		android:icon="@drawable/ic_visibility_black_18dp"
		android:title="@string/menu_tv"/>
    <item
        android:id="@+id/favorites_menu"
        android:icon="@drawable/ic_favorite_black_18dp"
        android:title="@string/menu_favorites" />
    </menu>
</item>

<item
	android:id="@+id/settings_menu"
	android:icon="@drawable/ic_settings_applications_black_18dp"
	android:title="@string/menu_settings" 
	android:checkable="false"/>

</menu>
